Going to need another solution for the animation overflow issue

--- a/less/game.less
+++ b/less/game.less
@@ -391,12 +391,6 @@ body {
 	}
 }
 
-.animation-container {
-	overflow: hidden;
-	max-width: 100%;
-	position: relative;
-}
-
 #score {
 	position: absolute;
 	top: 0;
